--- a/fm-frontend/package.json
+++ b/fm-frontend/package.json
@@ -34,6 +34,7 @@
     "mime": "^4.0.4",
     "mobx": "^6.13.1",
     "mobx-react": "^9.1.1",
+    "node-sass": "^9.0.0",
     "nuka-carousel": "^5.1.2",
     "react": "18.2.0",
     "react-avatar": "^5.0.3",
@@ -62,7 +63,6 @@
     "react-toastify": "^10.0.5",
     "react-video-thumbnail": "^0.1.3",
     "reactstrap": "^9.2.2",
-    "sass": "^1.89.1",
     "sass-loader": "^16.0.1",
     "swiper": "^11.1.14",
     "typescript": "^5.8.2",
