--- a/fm-backend/package.json
+++ b/fm-backend/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "Backend API server",
   "main": "dist/index.js",
+  "type": "module",
   "license": "MIT",
   "scripts": {
-    "start": "npx cross-env NODE_OPTIONS=--max-old-space-size=1024 tsc && node dist/index.js",
-    "build": "npx cross-env NODE_OPTIONS=--max-old-space-size=1024 tsc && npx copy-files-from-to",
+    "start": "node dist/index.js",
+    "build": "npx cross-env NODE_OPTIONS=--max-old-space-size=2048 tsc && npx copy-files-from-to",
     "dev": "yarn prestart && nodemon --config nodemon.json",
     "prestart": "rimraf ./dist && npx copy-files-from-to"
   },
