--- a/fm-backend/package.json
+++ b/fm-backend/package.json
@@ -1,64 +1,54 @@
 {
-  "name": "fm-backend",
-  "version": "1.0.0",
-  "description": "Backend API server",
-  "main": "dist/index.js",
-  "type": "module",
-  "license": "MIT",
-  "scripts": {
-    "start": "node dist/index.js",
-    "build": "npx cross-env NODE_OPTIONS=--max-old-space-size=2048 tsc && npx copy-files-from-to",
-    "dev": "yarn prestart && nodemon --config nodemon.json",
-    "prestart": "rimraf ./dist && npx copy-files-from-to"
-  },
-  "copyFiles": [
-    {
-      "from": [
-        "./**",
-        "!./**/dist",
-        "!./**/tsconfig.json",
-        "!./**/public",
-        "!./**/*.{js,ts}",
-        "!./**/node_modules"
-      ],
-      "to": "dist"
-    }
-  ],
-  "dependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "bcryptjs": "^2.4.3",
-    "cloudinary": "^2.5.1",
-    "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
-    "dayjs": "^1.11.13",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "express-jwt": "^8.4.1",
-    "handlebars": "^4.7.8",
-    "http-errors": "^2.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.6.3",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.15",
-    "puppeteer": "^24.8.2",
-    "rimraf": "^6.0.1",
-    "streamifier": "^0.1.1"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/http-errors": "^2.0.4",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/lodash": "^4.17.13",
-    "@types/multer": "^1.4.11",
-    "@types/node": "^20.14.0",
-    "@types/nodemailer": "^6.4.15",
-    "copy-files-from-to": "^3.11.0",
-    "nodemon": "^3.1.6",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  }
+	"name": "fm-backend",
+	"version": "1.0.0",
+	"description": "Backend API server",
+	"main": "dist/index.js",
+	"license": "MIT",
+	"scripts": {
+		"start": "yarn prestart && nodemon --config nodemon.json",
+		"dev": "yarn prestart && nodemon --config nodemon.json",
+		"prestart": "rimraf ./dist && copy-files-from-to"
+	},
+	"copyFiles": [
+		{
+			"from": [
+				"./**",
+				"!./**/dist",
+				"!./**/tsconfig.json",
+				"!./**/public",
+				"!./**/*.{js,ts}",
+				"!./**/node_modules"
+			],
+			"to": "dist"
+		}
+	],
+	"dependencies": {
+		"@types/bcryptjs": "^2.4.6",
+		"bcryptjs": "^2.4.3",
+		"cloudinary": "^2.5.1",
+		"cors": "^2.8.5",
+		"dayjs": "^1.11.13",
+		"dotenv": "^16.4.5",
+		"express": "^4.21.0",
+		"express-jwt": "^8.4.1",
+		"handlebars": "^4.7.8",
+		"http-errors": "^2.0.0",
+		"jsonwebtoken": "^9.0.2",
+		"mongoose": "^8.6.3",
+		"multer": "^1.4.5-lts.1",
+		"nodemailer": "^6.9.15",
+		"puppeteer": "^24.8.2",
+		"rimraf": "^6.0.1",
+		"streamifier": "^0.1.1"
+	},
+	"devDependencies": {
+		"@types/lodash": "^4.17.13",
+		"copy-files-from-to": "^3.11.0",
+		"nodemon": "^3.1.6",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.6.3"
+	},
+	"engines": {
+		"node": ">=18.0.0"
+	}
 }
