--- a/fm-backend/package.json
+++ b/fm-backend/package.json
@@ -5,9 +5,9 @@
 	"main": "dist/index.js",
 	"license": "MIT",
 	"scripts": {
-		"start": "yarn prestart && nodemon --config nodemon.json",
-		"dev": "yarn prestart && nodemon --config nodemon.json",
-		"prestart": "rimraf ./dist && copy-files-from-to"
+		"start": "node dist/index.js",
+		"dev": "nodemon --config nodemon.json",
+		"build": "rimraf ./dist && tsc && copy-files-from-to"
 	},
 	"copyFiles": [
 		{
