--- a/fm-backend/package.json
+++ b/fm-backend/package.json
@@ -23,9 +23,11 @@
 		}
 	],
 	"dependencies": {
+		"@sparticuz/chromium": "^133.0.0",
 		"@types/bcryptjs": "^2.4.6",
 		"bcryptjs": "^2.4.3",
 		"cloudinary": "^2.5.1",
+		"copy-files-from-to": "^3.11.0",
 		"cors": "^2.8.5",
 		"dayjs": "^1.11.13",
 		"dotenv": "^16.4.5",
@@ -43,7 +45,6 @@
 	},
 	"devDependencies": {
 		"@types/lodash": "^4.17.13",
-		"copy-files-from-to": "^3.11.0",
 		"nodemon": "^3.1.6",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.6.3"
