--- a/fm-frontend/package.json
+++ b/fm-frontend/package.json
@@ -62,6 +62,7 @@
     "react-toastify": "^10.0.5",
     "react-video-thumbnail": "^0.1.3",
     "reactstrap": "^9.2.2",
+    "recharts": "^2.15.3",
     "sass": "^1.89.1",
     "sass-loader": "^16.0.1",
     "swiper": "^11.1.14",
